= 3.5.4 (not released yet)
- Fix chosen form_ui for plural associations

= 3.5.3
- Fix :text fields for rails >= 5.1
- Send empty array in collection associations with select form_ui (checkbox or draggable list) when no option is available

= 3.5.2
- Load chosen on turbolinks:load event
- Fix association.blank? when associated_limit=0 and includes=nil

= 3.5.1
- Fix set false options for date picker
- Fix :hidden form_ui for singular associations
- Fix sorting by columns not included in list for SQL Server

= 3.5.0
- add basic support for Mongoid
- add support for associations between Mongoid and ActiveRecord with ActiveMongoid
- use concerns for routes, deprecate as_routes method
- add install generator
- rails 5.0 support and turbolinks 5.0 support, without jquery.turbolinks
- rename active_scaffold generator as active_scaffold:resource
- rename active_scaffold_controller generator as active_scaffold:controller
- remove deprecations from 3.4.x (active_scaffold_includes and using @record in helpers)
- check create authorized for create on list (config.list.always_show_create)
- allow to disable inplace_edit for column when update form is enabled
- add support for aggregated lists to field_search (config.field_search.group_options)
- add support for range conditions in url params for date and datetime columns
- add :color form_ui with "No color" checkbox to disable if column may be null
- add inline_links config to show action, display member links in show action loaded in page
- add :telephone list_ui displaying formatted phone number with tel: link
- add global config option to display reason for disabled action, authorized methods must return string with reason, and string is interpreted as not authorized
- add config.column shortcut to set defaults for column settings with ActiveScaffold.set_defaults
- stop saving embedded scaffolds info into session, so no more CookieOverflow errors caused by loading many embedded scaffolds