@@ -32,11 +32,11 @@ module ActiveScaffold
           klass = association_klass_scoped(association, klass, record)
           relation = klass.where(conditions)
           column = column_for_association(association, record)
-          if column && column.try(:sort) && column.sort[:sql]
-            if column.includes
-              include_assoc = column.includes.find { |assoc| assoc.is_a?(Hash) && assoc.include?(association.name) }
-              relation = relation.includes(include_assoc[association.name]) if include_assoc
-            end
+          if column && column.includes
+            include_assoc = column.includes.find { |assoc| assoc.is_a?(Hash) && assoc.include?(association.name) }
+            relation = relation.includes(include_assoc[association.name]) if include_assoc
+          end
+          if column && column.sort && column.sort[:sql]
             relation = relation.order(column.sort[:sql])
           end
           relation = yield(relation) if block_given?
